--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </li>
             </ul>
           </div>
-          
+
           <div class="col-md-9">
             <table class="table table-striped">
               <thead>
@@ -77,6 +77,10 @@
           </div>
         </div>
       </div>
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+      <script src="static/js/data.js"></script>
+      <script src="static/js/app.js"></script>
 
 </body>
 
