--- a/index.html
+++ b/index.html
@@ -54,27 +54,27 @@
               <ul class="list-group bg-dark">
                 <li class="list-group-item bg-dark">
                     <label for="date">Enter Date</label>
-                    <input type="text" placeholder="1/10/2010" id="datetime" />
+                    <input type="text" placeholder="date" id="datetime" />
                 </li>
 
                 <li class="list-group-item bg-dark">
                     <label for="date">City</label>
-                    <input type="text" id="city" />
+                    <input type="text" placeholder="city" id="city" />
                 </li>
 
                 <li class="list-group-item bg-dark">
                     <label for="date">State</label>
-                    <input type="text" id="state" />
+                    <input type="text" placeholder="state" id="state" />
                 </li>
 
                 <li class="list-group-item bg-dark">
                     <label for="date">Country</label>
-                    <input type="text" id="country" />
+                    <input type="text" placeholder="country" id="country" />
                 </li>
 
                 <li class="list-group-item bg-dark">
                     <label for="date">Shape</label>
-                    <input type="text" id="shape" />
+                    <input type="text" placeholder="shape" id="shape" />
                 </li>
 
             </ul>
